--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="text/javaschipt" src="http://maps.google.com/maps/api/js?sensor=false"> </script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
+    integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3k7w2cPBBEaN1DT5jJvjcCw7W4LcWnxQ"></script>
 </head>
 
 <body class="mat-typography">
